# desafio-anota-ai

./: .env.example  app.py  pyproject.toml
src/: server.py
src/config/mongo/: mongo_db_config.py
src/domain/category/: category.py
src/domain/products/: products.py
